c3/think
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:1906:10: error: conflicting types for 'think'
move_s * think( move_s *retstr) 
         ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/protos.h:63:8: note: previous declaration is here
move_s think (void);
       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2007:13: error: subscripted value is not an array, pointer, or vector
true_i_depth[0] = 0; 
~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2071:10: error: use of undeclared identifier 'off_41E7E8'
puts( ( &off_41E7E8)[phase]); 
         ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2155:12: error: expected expression
*( _OWORD *)( ( char *)&killer2[0].from + v16) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2155:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer2[0].from + v16) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2155:61: error: expected expression
*( _OWORD *)( ( char *)&killer2[0].from + v16) = *( _OWORD *)&dummy.from; 
                                                            ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2155:53: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer2[0].from + v16) = *( _OWORD *)&dummy.from; 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2156:12: error: expected expression
*( _OWORD *)( ( char *)&killer3[0].from + v16) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2156:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer3[0].from + v16) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2156:61: error: expected expression
*( _OWORD *)( ( char *)&killer3[0].from + v16) = *( _OWORD *)&dummy.from; 
                                                            ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2156:53: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer3[0].from + v16) = *( _OWORD *)&dummy.from; 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2158:12: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + v16) = *( _OWORD *)&dummy.from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2158:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + v16) = *( _OWORD *)&dummy.from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2158:58: error: expected expression
*( _OWORD *)( ( char *)&path[0].from + v16) = *( _OWORD *)&dummy.from; 
                                                         ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2158:50: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&path[0].from + v16) = *( _OWORD *)&dummy.from; 
                                                 ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2182:30: error: too many arguments to function call, expected 3, have 4
search_root( &v58, v20, v21, i_depth); 
~~~~~~~~~~~                  ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2197:39: error: too many arguments to function call, expected 3, have 4
search_root( &v58, -1000000, 1000000, i_depth); 
~~~~~~~~~~~                           ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2205:39: error: too many arguments to function call, expected 3, have 4
search_root( &v58, -1000000, 1000000, i_depth); 
~~~~~~~~~~~                           ^~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2234:13: error: subscripted value is not an array, pointer, or vector
true_i_depth[0] = i_depth; 
~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2274:25: error: too many arguments to function call, expected single argument 'compmove', have 2 arguments
proofnumbercheck( &v62, compmove); 
~~~~~~~~~~~~~~~~        ^~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/protos.h:125:1: note: 'proofnumbercheck' declared here
move_s proofnumbercheck(move_s compmove);
^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2279:44: error: use of undeclared identifier 'xmmword_41C5A0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41C5A0); 
                                           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2313:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v43 = 0LL; 
    ^ ~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2319:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v43 = 0LL; 
    ^ ~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2325:75: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)( 4 * v44 + 6702608)), ( __m128i)0LL), 
                                                                          ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2328:71: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)&rootlosers[v44]), ( __m128i)0LL), 
                                                                      ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2332:75: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)( 4 * v44 + 6702624)), ( __m128i)0LL), 
                                                                          ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2335:75: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)( 4 * v44 + 6702592)), ( __m128i)0LL), 
                                                                          ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2347:75: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)( 4 * v44 + 6702592)), ( __m128i)0LL)), 
                                                                          ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2348:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
( __m128i)-1LL); 
^~~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2352:71: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_cmpeq_epi32( _mm_load_si128( ( const __m128i *)&rootlosers[v44]), ( __m128i)0LL)), 
                                                                      ^~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2353:1: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
( __m128i)-1LL); 
^~~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2377:14: error: passing 'char [8]' to parameter of incompatible type 'move_s'
comp_to_san( str, compmove); 
             ^~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/protos.h:119:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[]);
                         ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/search.c:2427:54: error: subscripted value is not an array, pointer, or vector
if ( ( unsigned int)( result - 1) < 5 || true_i_depth[0] <= 2 ) 
                                         ~~~~~~~~~~~~^~
33 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/think/src/obj/search.o] Error 1
